--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   animated_text_kit: ^4.2.1
   animations: ^2.0.2
+  auto_size_text: ^3.0.0-nullsafety.0
+  card_swiper: ^2.0.1
+  carousel_images: ^1.1.2
   convex_bottom_bar: ^3.0.0
   cupertino_icons: ^1.0.2
   firebase_analytics: ^9.0.5
@@ -40,12 +43,6 @@ dependencies:
   slide_button: ^0.2.9
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
