--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   auto_size_text: ^3.0.0-nullsafety.0
   card_swiper: ^2.0.1
   carousel_images: ^1.1.2
+  carousel_slider: ^4.0.0
   convex_bottom_bar: ^3.0.0
   cupertino_icons: ^1.0.2
   firebase_analytics: ^9.0.5
@@ -39,9 +40,14 @@ dependencies:
   firebase_core: ^1.11.0
   flutter:
     sdk: flutter
+  flutter_swiper: ^1.1.6
+  google_fonts: ^2.2.0
   google_sign_in: ^5.2.1
   page_transition: ^2.0.4
+  shared_preferences: ^2.0.12
+  shared_preferences_web: ^2.0.3
   slide_button: ^0.2.9
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_lints: ^1.0.0
