--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences_web: ^2.0.3
   slide_button: ^0.2.9
   url_launcher: ^6.0.18
+  url_launcher_web: ^2.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
